--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -31,16 +31,16 @@
         ]
       },
       "ECMA2Yaml": {
-        "SourceXmlFolder": "dotnet/xml",
-        "OutputYamlFolder": "dotnet/api",
+        "SourceXmlFolder": "E2E_P_Dotnet_2017_9_13_14_14_31/xml",
+        "OutputYamlFolder": "E2E_P_Dotnet_2017_9_13_14_14_31/api",
         "Flatten": true,
-        "id": "dotnet-template"
+        "id": "E2E_P_Dotnet_2017_9_13_14_14_31"
       },
       "SplitTOC": [
-        "dotnet/api/dotnet-template/toc.yml"
+        "E2E_P_Dotnet_2017_9_13_14_14_31/api/E2E_P_Dotnet_2017_9_13_14_14_31/toc.yml"
       ],
       "DiffFolder": [
-        "dotnet/api"
+        "E2E_P_Dotnet_2017_9_13_14_14_31/api"
       ]
     }
   ],
